feat(dresscode): add dress code

--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
         <!-- end container -->
       </section>
       <!-- start wpo-story-section -->
+
       <section class="wpo-story-section section-padding" id="story">
         <div class="container-fluid">
           <div class="wpo-section-title">
@@ -509,6 +510,61 @@
         <!-- end container -->
       </section>
       <!-- end story-section -->
+      <section
+        class="wpo-portfolio-section-s2 pb-0 section-padding"
+        id="dressCode"
+      >
+        <div class="container-fluid">
+          <div class="wpo-section-title">
+            <h4>Gayak & Kulay</h4>
+            <h2>Ito’y magsisilbing gabay para sa iyong susuotin</h2>
+          </div>
+          <div class="couple-area">
+            <div class="row align-items-center">
+              <div class="col col-md-4 col-12">
+                <div
+                  class="couple-item wow fadeInLeftSlow"
+                  data-wow-duration="1700ms"
+                  style="
+                    visibility: visible;
+                    animation-duration: 1700ms;
+                    animation-name: fadeInLeftSlow;
+                  "
+                >
+                  <div class="couple-img">
+                    <img src="./files/colorcode.png" alt="" />
+                  </div>
+
+                  <div class="couple-text">
+                    <p>
+                      Mainam ding gumamit ng modernong barong at filipiniana, o
+                      hindi kaya ay bestida na may bolero, na mas madalas nating
+                      nakikita sa ating kapanahunan.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col col-md-8 col-12">
+                <div
+                  class="couple-item wow fadeInRightSlow"
+                  data-wow-duration="1700ms"
+                  style="
+                    visibility: visible;
+                    animation-duration: 1700ms;
+                    animation-name: fadeInRightSlow;
+                  "
+                >
+                  <div class="couple-img">
+                    <img src="./files/dresscode.png" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end container -->
+      </section>
+
       <!-- start wpo-portfolio-section -->
       <section
         class="wpo-portfolio-section-s2 pb-0 section-padding"
