feat(content): added content

--- a/index.html
+++ b/index.html
@@ -332,9 +332,11 @@
                   <div class="couple-text">
                     <h3>Yuys Escoreal</h3>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                      Urna orci auctor vitae nisl. Erat fringilla pellentesque
-                      amet tempus. Commodo mi vitae, sagittis blandit.
+                      Bagamat unos sa buhay ni Rigo ang kasungitan ni Yuys,
+                      binubusog naman ni Yuys si Rigo ng pagmamahal at pag
+                      aaruga. Chares. Hindi naman talaga mapagkaka-ila na ang
+                      mga babae ay kay hirap intindihin dapatwat pagpapasensya
+                      ni Rigo ay abot hanggang langit.
                     </p>
                   </div>
                 </div>
@@ -370,9 +372,10 @@
                   <div class="couple-text">
                     <h3>Karl Rigo Andrino</h3>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                      Urna orci auctor vitae nisl. Erat fringilla pellentesque
-                      amet tempus. Commodo mi vitae, sagittis blandit.
+                      Maasahan sa lahat ng bagay pwera na lang sa mga oras na
+                      siya ag nag lalaro ng ML. Hindi matipuno, hindi rin
+                      masyadong bastos at higit sa lahat matakaw sa tulog.
+                      Perfect na sana, kaso lolong sa ML.
                     </p>
                   </div>
                 </div>
@@ -419,12 +422,15 @@
                   "
                 >
                   <h2>Ang una nating pagtatagpo</h2>
-                  <span>12 Feb 2016</span>
+                  <span>ika-20 ng Setyember, 2022</span>
                   <p>
-                    Lorem ipsum dolor sit amet, constetur adicng elit. Ultricies
-                    nulla mi tempus mcorper for praesent. Ultricies interdum
-                    volutpat morbi nam ornare neque elit leo, diam. Malesuada
-                    enim ac amurna tempor vel duis.
+                    Nang hindi inaasahan, mga landas nati’y nagtagpo. Dapatwat
+                    tayong dalawa ay may iba’t ibang bersyon kung ano ang puno’t
+                    dahilan ng una naming paguusap. Law week nun, ika-20 ng
+                    Setyember, 2022, sa Olingan Sports Complex kung saan may
+                    laro ng basketball. Malim-lalim na ang gabi nun at hindi na
+                    gaanong marami ang tao. Ay basta, ang importante, nagka krus
+                    ang aming mga landas.
                   </p>
                 </div>
               </div>
@@ -495,12 +501,14 @@
                   "
                 >
                   <h2>OO, ang sagot nya</h2>
-                  <span>10 Mar 2016</span>
+                  <span>ika-23 ng Setyembre, 2023</span>
                   <p>
-                    Lorem ipsum dolor sit amet, constetur adicng elit. Ultricies
-                    nulla mi tempus mcorper for praesent. Ultricies interdum
-                    volutpat morbi nam ornare neque elit leo, diam. Malesuada
-                    enim ac amurna tempor vel duis.
+                    Ibig man naming alahanin, hindi na talaga namin matandaan
+                    kung saan at kailan. Ito may di namin lubos na maalala, ang
+                    importante ay ito’y naging parte ng mga alaala na puno ng
+                    kaligayan at kagalakan. Kung sino man ang may alam, sana’y
+                    ipagbigay alam ninyo sa amin sapagkat ito’y lubos naming
+                    ikagagalak.
                   </p>
                 </div>
               </div>
@@ -757,71 +765,23 @@
                   <div class="wpo-section-title">
                     <h4>Dadalo kaba?</h4>
                   </div>
-                  <form
-                    method="post"
-                    class="contact-validation-active"
-                    id="contact-form-main"
-                    novalidate="novalidate"
-                  >
-                    <div>
-                      <input
-                        type="text"
-                        class="form-control"
-                        name="name"
-                        id="name"
-                        placeholder="Pangalan"
-                      />
-                    </div>
-                    <div>
-                      <input
-                        type="email"
-                        class="form-control"
-                        name="email"
-                        id="email"
-                        placeholder="Liham-elektroniko"
-                      />
-                    </div>
-                    <div class="radio-buttons">
-                      <p>
-                        <input
-                          type="radio"
-                          id="attend"
-                          name="radio-group"
-                          checked=""
-                        />
-                        <label for="attend">Ako ay dadado</label>
-                      </p>
-                      <p>
-                        <input type="radio" id="not" name="radio-group" />
-                        <label for="not">Patawad, Hindi ako makakadalo</label>
-                      </p>
-                    </div>
-                    <div>
-                      <select name="guest" class="form-control">
-                        <option disabled="disabled" selected="">
-                          Numero ng mga bisita
-                        </option>
-                        <option>01</option>
-                        <option>02</option>
-                        <option>03</option>
-                        <option>04</option>
-                        <option>05</option>
-                      </select>
-                    </div>
-                    <div class="submit-area">
-                      <button type="submit" class="theme-btn">RSVP</button>
-                      <div id="c-loader">
-                        <i class="ti-reload"></i>
-                      </div>
-                    </div>
-                    <div class="clearfix error-handling-messages">
+
+                  <div class="submit-area">
+                    <a
+                      href="https://forms.gle/yj9o95cYyTit2UGQ9"
+                      target="_blank"
+                      class="theme-btn"
+                    >
+                      Ako po ay dadalo
+                    </a>
+                  </div>
+                  <!-- <div class="clearfix error-handling-messages">
                       <div id="success">Thank you</div>
                       <div id="error">
                         Error occurred while sending email. Please try again
                         later.
                       </div>
-                    </div>
-                  </form>
+                    </div> -->
                 </div>
               </div>
             </div>
