--- a/index.html
+++ b/index.html
@@ -463,12 +463,14 @@
                   "
                 >
                   <h2>Unang Lakad</h2>
-                  <span>23 Apr 2016</span>
+                  <span></span>
                   <p>
-                    Lorem ipsum dolor sit amet, constetur adicng elit. Ultricies
-                    nulla mi tempus mcorper for praesent. Ultricies interdum
-                    volutpat morbi nam ornare neque elit leo, diam. Malesuada
-                    enim ac amurna tempor vel duis.
+                    Ibig man naming alahanin, hindi na talaga namin matandaan
+                    kung saan at kailan. Ito may di namin lubos na maalala, ang
+                    importante ay ito’y naging parte ng mga alaala na puno ng
+                    kaligayan at kagalakan. Kung sino man ang may alam, sana’y
+                    ipagbigay alam ninyo sa amin sapagkat ito’y lubos naming
+                    ikagagalak.
                   </p>
                 </div>
               </div>
@@ -503,12 +505,12 @@
                   <h2>OO, ang sagot nya</h2>
                   <span>ika-23 ng Setyembre, 2023</span>
                   <p>
-                    Ibig man naming alahanin, hindi na talaga namin matandaan
-                    kung saan at kailan. Ito may di namin lubos na maalala, ang
-                    importante ay ito’y naging parte ng mga alaala na puno ng
-                    kaligayan at kagalakan. Kung sino man ang may alam, sana’y
-                    ipagbigay alam ninyo sa amin sapagkat ito’y lubos naming
-                    ikagagalak.
+                    Matagal-tagal na napag-usapan nina Rigo at Yuys ang
+                    pagpapakasal at noong ika-23 ng Setyembre, 2023, Lungsod ng
+                    Dapitan, opisyal na nag-propose si Rigo ng kanyang intensyon
+                    sa pagpapakasal. Doon din nalaman ni Yuys na nagpaalam na
+                    pala si Rigo sa mga magulang ni Yuys ilang buwan na ang
+                    nakakaraan.
                   </p>
                 </div>
               </div>
